2008-04-18  Stefan Monnier  <monnier@iro.umontreal.ca>

	* Makefile.in (TOOLKIT_DEFINES): Remove.
	(LIBW): Use a bit less #if, remove left over OPEN_LOOK stuff.

2008-04-06  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* Makefile.in (MAC_OBJ): Add mactoolbox.o.
	(mactoolbox.o): New target.

	* mac.c [MAC_OSX] (select_and_poll_event, sys_select):
	Use mac_run_loop_run_once instead of CFRunLoopRunInMode.

	* macfns.c (x_set_background_color, mac_window, x_create_tip_frame):
	Use mac_set_frame_window_background instead of XSetWindowBackground.
	(x_set_tool_bar_lines) [USE_MAC_TOOLBAR]:
	Use mac_is_window_toolbar_visible instead of IsWindowToolbarVisible.
	(x_set_name_internal) [TARGET_API_MAC_CARBON]: Use mac_set_window_title
	instead of SetWindowTitleWithCFString.
	(mac_update_proxy_icon) [TARGET_API_MAC_CARBON]: Remove BLOCK_INPUT.
	Move function to mactoolbox.c.
	(mac_update_title_bar) [TARGET_API_MAC_CARBON]:
	Use mac_set_window_modified instead of SetWindowModified.
	Add BLOCK_INPUT around mac_set_window_modified/mac_update_proxy_icon.
	(mac_window, x_create_tip_frame): Use mac_create_frame_window.
	(Fx_focus_frame): Use mac_front_non_floating_window instead of
	FrontNonFloatingWindow.  Use mac_activate_window instead of
	ActivateWindow.  Use mac_active_non_floating_window instead of
	ActiveNonFloatingWindow.
	(show_hourglass, hide_hourglass) [TARGET_API_MAC_CARBON]:
	Use mac_show_hourglass and mac_hide_hourglass.
	(compute_tip_xy) [TARGET_API_MAC_CARBON]: Use mac_get_global_mouse
	instead of GetGlobalMouse.
	(Fx_show_tip): Use mac_move_window/mac_size_window/mac_show_window
	instead of MoveWindow/SizeWindow/ShowWindow, respectively.
	Use mac_bring_window_to_front instead of BringToFront.
	(Qfile_name_history) [TARGET_API_MAC_CARBON]: Move extern to
	mactoolbox.c.
	(Fx_file_dialog) [TARGET_API_MAC_CARBON]: Move function body to
	mac_file_dialog in mactoolbox.c.  Use mac_file_dialog.
	(mac_nav_event_callback) [TARGET_API_MAC_CARBON]: Move function to