@@ -1,3 +1,8 @@
+2008-04-19  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* dired.c (directory_files_internal, file_name_completion):
+	Only call ENCODE_FILE if the string is indeed decoded.
+
 2008-04-18  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* Makefile.in (TOOLKIT_DEFINES): Remove.
